samples/_failures_safe/1761692902_1bf1ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cb0d35d.c: In function ‘main’:
./samples/SAFE/__tmp_5cb0d35d.c:165:13: error: expected expression at end of input
  165 |             case
      |             ^~~~
./samples/SAFE/__tmp_5cb0d35d.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5cb0d35d.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5cb0d35d.c:165:13: error: expected declaration or statement at end of input
